--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hello World",
-  "short_name": "Hello",
+  "name": "tommy first pwa",
+  "short_name": "tommypwa",
   "icons": [{
     "src": "images/hello-icon-128.png",
       "sizes": "128x128",
@@ -27,8 +27,8 @@
       "type": "image/png"
     }],
   "lang": "en-US",
-  "start_url": "./index.html",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "white",
-  "theme_color": "white"
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff"
 }
